# datalens

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/apps/approvals/: admin.py  models.py  policy.py  serializers.py  services.py  views.py
backend/apps/common/: admin_api.py  auth.py  authentication.py  dashboard.py  email.py  exceptions.py  frontend.py  models.py  pagination.py  permissions.py  privacy.py  scoping.py  seed_data.py  serializers.py  sync.py  viewsets.py
backend/apps/communities/: admin.py  models.py  serializers.py  views.py
backend/apps/groups/: admin.py  models.py  serializers.py  views.py
backend/apps/impacts/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/institutions/: admin.py  models.py  serializers.py  views.py
backend/apps/members/: admin.py  models.py  serializers.py  views.py
backend/apps/participation/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/resources/: admin.py  models.py  serializers.py  (+1 more)
backend/config/: urls.py
backend/requirements/: base.txt  dev.txt
backend/tests/: test_admin_api.py  test_api_hardening.py  test_approval_policy.py  test_core_api.py  test_core_models.py  test_dashboard_api.py  test_governance_api.py  test_governance_models.py  test_impact_approval_api.py  test_impact_approval_models.py  test_management_commands.py  test_milestone_permissions_approval_sync.py  test_permissions_privacy.py  test_resource_api.py  test_resource_models.py  test_ui_ready_milestones.py
(+86 files in other folders)
